--- a/views/components/header.ejs
+++ b/views/components/header.ejs
@@ -1,9 +1,37 @@
 <header>
-  <nav>
-    <ul>
-      <li><a href="/">Página Inicial</a></li>
-      <li><a href="/about">Sobre Nós</a></li>
-      <!-- Adicione outras opções de navegação conforme necessário -->
-    </ul>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container">
+      <a class="navbar-brand" href="/">MyQuote</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav me-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="/authors-topics">Autores & Tópicos</a>
+          </li>
+        </ul>
+        <ul class="navbar-nav">
+        <% if (user) { %>
+          <li class="nav-item">
+            <span class="nav-link">Olá, <%= user.username %></span>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/quotes/new">Nova Frase</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/logout">Sair</a>
+          </li>
+        <% } else { %>
+          <li class="nav-item">
+            <a class="nav-link" href="/login">Login</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/register">Registrar</a>
+          </li>
+        <% } %>
+        </ul>
+      </div>
+    </div>
   </nav>
 </header>
