--- a/views/layout/main.ejs
+++ b/views/layout/main.ejs
@@ -9,10 +9,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
   
   <!-- Custom CSS -->
-  <style>
-    /* Include custom styles */
-    <%- include('../css/style.css') %>
-  </style>
+  <link rel="stylesheet" type="text/css" href="/css/style.css">
 </head>
 <body>
   <!-- Header partial -->
