--- a/views/pages/error.ejs
+++ b/views/pages/error.ejs
@@ -1,4 +1,4 @@
-<%- include('../components/header') %>
+<% layout('layout/main') %>
 
 <div class="container mt-4">
   <div class="alert alert-danger">
