--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,4 +1,7 @@
-<%- include('../components/header') %>
+<% layout('layout/main') %>
+
+<h1>Bem-vindo ao MyQuote</h1>
+<p>Confira nossas frases.</p>
 
 <div class="container mt-4">
   <div class="row">
