--- a/views/pages/form.ejs
+++ b/views/pages/form.ejs
@@ -1,5 +1,4 @@
-ejs
-<%- include('../partials/header') %>
+<% layout('layout/main') %>
 
 <div class="container mt-5">
   <div class="row justify-content-center">
