--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,32 +1,29 @@
 <% layout('layout/main') %>
 
-<h1>Bem-vindo ao MyQuote</h1>
-<p>Confira nossas frases.</p>
+<%- include('../partials/hero') %>
 
 <div class="container mt-4">
-  <div class="row">
-    <div class="col-md-8">
-      <h2 class="mb-4">Frases Recentes</h2>
-      <% if (quotes && quotes.length > 0) { %>
-        <div class="quotes-list">
-          <% quotes.forEach(quote => { %>
-            <div class="card mb-3">
-              <div class="card-body">
-                <blockquote class="mb-0">
-                  <p>"<%= quote.text %>" - <%= quote.author_name %></p>
-                  <% if (quote.topics && quote.topics.length > 0) { %>
-                    <div class="mt-2">
-                      <% quote.topics.forEach(topic => { %>
-                        <span class="badge bg-secondary me-1">#<%= topic.name %></span>
-                      <% }) %>
-                    </div>
-                  <% } %>
-                </blockquote>
-              </div>
+    <h2>Frases Recentes</h2>
+    <% if (quotes && quotes.length > 0) { %>
+      <div class="quotes-list">
+        <% quotes.forEach(quote => { %>
+          <div class="card mb-3">
+            <div class="card-body">
+              <blockquote class="mb-0">
+                <p>"<%= quote.text %>" - <%= quote.author_name %></p>
+                <% if (quote.topics && quote.topics.length > 0) { %>
+                  <div class="mt-2">
+                    <% quote.topics.forEach(topic => { %>
+                      <span class="badge bg-secondary me-1">#<%= topic.name %></span>
+                    <% }) %>
+                  </div>
+                <% } %>
+              </blockquote>
             </div>
-          <% }) %>
-        </div>
-      <% } else { %>
-        <p>Nenhuma frase cadastrada ainda.</p>
-      <% } %>
-    </div>
+          </div>
+        <% }) %>
+      </div>
+    <% } else { %>
+      <p>Nenhuma frase cadastrada ainda.</p>
+    <% } %>
+  </div>
