--- a/views/pages/register.ejs
+++ b/views/pages/register.ejs
@@ -7,7 +7,7 @@
         <div class="card-body">
           <h2 class="card-title text-center mb-4">Criar Conta</h2>
 
-          <% if (typeof error !== 'undefined') { %>
+          <% if (typeof error !== 'undefined' && error) { %>
             <div class="alert alert-danger" role="alert">
               <%= error %>
             </div>
