--- a/views/layout/main.ejs
+++ b/views/layout/main.ejs
@@ -13,11 +13,14 @@
 </head>
 <body>
     <!-- Header partial -->
-    <%- include('../components/header') %> 
+    <%- include('../components/header') %>
 
     <!-- Main content -->
-    <main class="container mt-4">
+    <main>
         <%- body %>
     </main>
+
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
