--- a/views/pages/filtered-quotes.ejs
+++ b/views/pages/filtered-quotes.ejs
@@ -14,26 +14,7 @@
       <% if (quotes && quotes.length > 0) { %>
         <div class="quotes-list">
           <% quotes.forEach(quote => { %>
-            <div class="card mb-3">
-              <div class="card-body">
-                <blockquote class="mb-0">
-                  <p><%= quote.text %></p>
-                  <% if (filterType === 'topic' && quote.author_name) { %>
-                    <footer class="blockquote-footer">
-                      <%= quote.author_name %>
-                    </footer>
-                  <% } %>
-                </blockquote>
-
-                <% if (filterType === 'author' && quote.topics && quote.topics.length > 0) { %>
-                  <div class="mt-2">
-                    <% quote.topics.forEach(topic => { %>
-                      <span class="badge bg-secondary me-1"><%= topic.name %></span>
-                    <% }) %>
-                  </div>
-                <% } %>
-              </div>
-            </div>
+            <%- include('../partials/_quote_card', { quote: quote }) %>
           <% }) %>
         </div>
       <% } else { %>
