--- a/views/pages/topic-form.ejs
+++ b/views/pages/topic-form.ejs
@@ -3,7 +3,7 @@
 <div class="container mt-4">
   <div class="row">
     <div class="col-md-8 offset-md-2">
-      <div class="card">
+      <div class="card paper-card">
         <div class="card-body">
           <h2 class="card-title"><%= topic ? 'Editar Tópico' : 'Novo Tópico' %></h2>
 
